@@ -1,19 +1,0 @@
-// Copyright 2002-2012, University of Colorado
-package edu.colorado.phet.linegraphing.pointslope.model;
-
-import edu.colorado.phet.common.phetcommon.util.DoubleRange;
-import edu.colorado.phet.common.phetcommon.util.IntegerRange;
-import edu.colorado.phet.linegraphing.common.LGColors;
-import edu.colorado.phet.linegraphing.common.model.LineFormsModel;
-import edu.colorado.phet.linegraphing.common.model.StraightLine;
-
-/**
- * Model for the "Point-Slope" module.
- *
- * @author Chris Malley (cmalley@pixelzoom.com)
- */
-public class PointSlopeModel extends LineFormsModel {
-    public PointSlopeModel() {
-        super( new StraightLine( 2, 3, 1, LGColors.INTERACTIVE_LINE ) );
-    }
-}
